<resources>
    <string name="app_name">Lugares</string>
    <string name="tv_email">Email</string>
    <string name="tv_password">Password</string>
    <string name="title_activity_main">Main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_lugar">Lugares</string>
    <string name="menu_gallery">Maps</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_name">Lugar name</string>
    <string name="msg_image">Lugar image</string>
    <string name="msg_email">Email (xxx@abc.com)</string>
    <string name="msg_phone">Phone (9999-9999)</string>
    <string name="msg_web">Web Site</string>
    <string name="msg_added">Lugar Added</string>
    <string name="msg_updated">Lugar Updated</string>
    <string name="msg_missing_data">Missing Data</string>
    <string name="bt_add">Add</string>
    <string name="bt_update">Update</string>
    <string name="menu_delete">Delete Lugar</string>
    <string name="yes">yes</string>
    <string name="msg_sure_delete">Are you sure of delete </string>
    <string name="no">No</string>

    <string name="msg_send_email">Send email</string>
    <string name="msg_phone_call">Make a call</string>
    <string name="msg_whatsapp_send">Send WhatsApp</string>
    <string name="msg_web_view">Open web site</string>
    <string name="msg_map_view">Show place in maps</string>
    <string name="tv_latitude_lb">Latitude</string>
    <string name="tv_length_lb">Length</string>
    <string name="tv_height_lb">Height</string>
    <string name="msg_greetings">Hey folks</string>
    <string name="msg_email_message">The reason of this email is</string>
    <string name="msg_data">Missing data</string>
    <string name="msg_firebase_add">Lugar added</string>
    <string name="msg_firebase_delete">Lugar deleted</string>
    <string name="msg_firebase_update">Lugar updated</string>
    <string name="msg_firebase_no_add">ERROR: Could not add Lugar</string>
    <string name="msg_firebase_no_delete">ERROR: Could not delete Lugar</string>
    <string name="msg_firebase_no_update">ERROR: Could not update Lugar</string>
    <string name="error">Error</string>

    <string name="msg_record_pause">Play or pause recording</string>
    <string name="msg_play_audio">Play audio note</string>
    <string name="msg_delete_audio">Delete audio note</string>
    <string name="msg_rec_stop_nota">Record or stop audio note</string>

    <string name="msg_take_photo">Take photo</string>
    <string name="msg_rotate_l">Rotate to left</string>
    <string name="msg_rotate_r">Rotate to right</string>
    <string name="msg_recording_audio">Recording_audio</string>
    <string name="msg_stop_audio">Note audio stopped</string>
    <string name="msg_uploading_audio">Uploading audio note</string>
    <string name="msg_uploading_image">Uploading image</string>
    <string name="default_web_client_id_r" translatable="false">697577242075-7fpoq24qnqkl5fso77ieuij7vglhliss.apps.googleusercontent.com</string>
    <string name="google_maps_key" translatable="false">AIzaSyBhCZogV0YJMECkCAAHG4h3MsdCwdEnBLs</string>

</resources>