<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.lugar.UpdateLugarFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="15dp">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/msg_name" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/msg_email" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:text="@string/msg_phone" />

        <EditText
            android:id="@+id/et_web_site"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/msg_web" />

        <Button
            android:id="@+id/bt_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_update" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/bt_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/msg_send_email"
                android:src="@drawable/ic_email" />

            <ImageButton
                android:id="@+id/bt_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/msg_phone_call"
                android:src="@drawable/ic_call" />

            <ImageButton
                android:id="@+id/bt_whatsapp"
                android:layout_width="0dp"
                android:layout_height="92dp"
                android:layout_weight="1"
                android:contentDescription="@string/msg_whatsapp_send"
                android:scaleType="fitCenter"
                android:src="@drawable/whatsapp_logo"
                tools:ignore="ImageContrastCheck" />

            <ImageButton
                android:id="@+id/bt_web"
                android:layout_width="0dp"
                android:layout_height="92dp"
                android:layout_weight="1"
                android:contentDescription="@string/msg_web_view"
                android:scaleType="fitCenter"
                android:src="@drawable/web_logo" />

            <ImageButton
                android:id="@+id/btPlay"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_play" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_latitude"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|center_horizontal|center_vertical"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_length"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|center_horizontal|center_vertical"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_height"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|center_horizontal|center_vertical"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/bt_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/msg_map_view"
                android:src="@drawable/ic_location"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>
        <ImageView
            android:id="@+id/imagen"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:contentDescription="@string/msg_imagen"
            android:scaleType="centerInside"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/backgrounds/scenic" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>