<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.lugar.AddLugarFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_phone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/et_web_site"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_web"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/bt_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bt_add" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="25sp"
                android:padding="10sp"
                android:stretchColumns="*">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/tv_latitud1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:text="@string/tv_latitude_lb"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/tv_longitud1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:text="@string/tv_length_lb"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/tv_altura1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:text="@string/tv_height_lb"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/tv_latitud"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:textSize="18sp" />
                    <TextView
                        android:id="@+id/tv_longitud"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:textSize="18sp" />
                    <TextView
                        android:id="@+id/tv_altura"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:textSize="18sp" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>